--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Don't have an account yet? Go to signup</a><br>
+                                <a href="{% url 'registration-register' %}">Don't have an account yet? Go to signup</a><br>
                             </div>
                         </div>
                     </div>
