--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -1,9 +1,6 @@
 {% extends "registration/base.html" %}
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
-    <div class="row my-3 p-3">
-        <img class="rounded-circle account-img" src="{{ user.profile }} " style="cursor: pointer;"/>
-    </div>
     {% if user_form.errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
             <div id="form_errors">
@@ -26,19 +23,14 @@
                             {{ user_form.username }}
                         <label class="small mb-1">Email:</label>
                             {{ user_form.email }}
+                        <label class="small mb-1">Email Verified:</label>
+                        <br>
+                        <input type="text" id="email-verified" disabled value={{ profile.is_email_verified }}>
                     </div>
-                    <div class="form-group">
-                        <a href="{% url 'password_change' %}">Change Password</a>
-                        <hr>
-                        <label class="small mb-1">Change Avatar:</label>
-                        {{ profile_form.avatar }}
-                    </div>
-                    <label class="small mb-1">Bio:</label> {{ profile_form.bio }}
                 </div>
             </div>
             <br><br>
             <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
-            <button type="reset" class="btn btn-dark btn-lg">Reset</button>
         </form>
     </div>
 {% endblock content %}
