--- a/registration/templates/registration/verify_email_message.html
+++ b/registration/templates/registration/verify_email_message.html
@@ -3,10 +3,10 @@
     <div style="margin: 0; padding: 15px; background-color: #ffffff;">
         <p>Hi {{ user.name }},</p>
         <p>You created an account on UserGuiding, you need to verify your email. Please click on the button below to verify your email.</p>
-        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #5865F2; padding: 15px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+        <a href="{{ scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #5865F2; padding: 15px; font-weight: bold; text-decoration: none; border-radius: 5px;">
             Verify Email
         </a>
         <p style="margin-top: 40px;">Or you can copy the link below to your browser</p>
-        <p>{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}</p>
+        <p>{{ scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}</p>
     </div>
 </div>
