--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -29,7 +29,7 @@
                                         <div class="form-group">
                                             <a href="#"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
-                                            <a href="#"
+                                            <a href="{% url 'initiate_social_auth' %}"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
                                             <hr>
                                             <p class="text-center"><strong>OR</strong></p>
