--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -27,7 +27,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                            <a href="#"
+                                            <a href="{% url 'initiate_social_auth' %}?provider=gitHub"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
                                             <a href="{% url 'initiate_social_auth' %}?provider=google"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
