--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends "registration/base.html" %}
-{% block title %} Login Page {% endblock title%}
+{% block title %}
+    Login Page
+{% endblock title %}
 {% block content %}
     <div class="form-content my-3 p-3">
         <div class="container">
@@ -7,14 +9,12 @@
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
-                          <h3 class="font-weight-light my-1 text-center">Sign In</h3>
+                            <h3 class="font-weight-light my-1 text-center">Sign In</h3>
                         </div>
                         {% if form.errors %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
                                 <div id="form_errors">
-                                    {% for key, value in form.errors.items %}
-                                        <strong>{{ value }}</strong>
-                                    {% endfor %}
+                                    {% for key, value in form.errors.items %}<strong>{{ value }}</strong>{% endfor %}
                                 </div>
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
@@ -28,11 +28,13 @@
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
                                             <a href="{% url 'initiate_social_auth' %}?provider=gitHub"
-                                                   class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
+                                               class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
                                             <a href="{% url 'initiate_social_auth' %}?provider=google"
-                                                   class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
+                                               class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
                                             <hr>
-                                            <p class="text-center"><strong>OR</strong></p>
+                                            <p class="text-center">
+                                                <strong>OR</strong>
+                                            </p>
                                             <hr>
                                             <label class="small mb-1">Username</label>
                                             {{ form.username }}
@@ -42,8 +44,8 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                          <label class="small mb-1">Password</label>
-                                          {{ form.password }}
+                                            <label class="small mb-1">Password</label>
+                                            {{ form.password }}
                                         </div>
                                     </div>
                                 </div>
@@ -52,14 +54,14 @@
                                         <div class="form-group">
                                             <!-- Add a Remember me functionality -->
                                             {{ form.remember_me }}
-                                            <label> Remember me</label>
+                                            <label>Remember me</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group mt-0 mb-1">
-                                          <button name="login" class="col-md-12 btn btn-dark" id="login">Sign in</button>
+                                            <button name="login" class="col-md-12 btn btn-dark" id="login">Sign in</button>
                                         </div>
                                     </div>
                                 </div>
@@ -67,12 +69,13 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'registration-register' %}">Don't have an account yet? Go to signup</a><br>
+                                <a href="{% url 'registration-register' %}">Don't have an account yet? Go to signup</a>
+                                <br>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-     </div>
+    </div>
 {% endblock content %}
