--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -1,12 +1,12 @@
 {% extends "registration/base.html" %}
-{% block title %}Profile Page{% endblock title %}
+{% block title %}
+    Profile Page
+{% endblock title %}
 {% block content %}
     {% if user_form.errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
             <div id="form_errors">
-                {% for key, value in user_form.errors.items %}
-                    <strong>{{ value }}</strong>
-                {% endfor %}
+                {% for key, value in user_form.errors.items %}<strong>{{ value }}</strong>{% endfor %}
             </div>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -20,16 +20,17 @@
                 <div class="col-md-5">
                     <div class="form-group">
                         <label class="small mb-1">Username:</label>
-                            {{ user_form.username }}
+                        {{ user_form.username }}
                         <label class="small mb-1">Email:</label>
-                            {{ user_form.email }}
+                        {{ user_form.email }}
                         <label class="small mb-1">Email Verified:</label>
                         <br>
                         <input type="text" id="email-verified" disabled value={{ profile.is_email_verified }}>
                     </div>
                 </div>
             </div>
-            <br><br>
+            <br>
+            <br>
             <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
         </form>
     </div>
