--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -9,7 +9,7 @@
                 {% for key, value in user_form.errors.items %}<strong>{{ value }}</strong>{% endfor %}
             </div>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true"><i class="fas fa-times"></i></span>
             </button>
         </div>
     {% endif %}
