--- a/registration/templates/registration/register.html
+++ b/registration/templates/registration/register.html
@@ -12,7 +12,7 @@
                             <h3 class="font-weight-light my-4 text-center">Create Account</h3>
                         </div>
                         <div class="card-body">
-                            <form method="POST">
+                            <form method="post">
                                 {% csrf_token %}
                                 {% if form.errors %}
                                     <div class="alert alert-danger alert-dismissible" role="alert">
@@ -20,7 +20,7 @@
                                             {% for key, value in form.errors.items %}<strong>{{ value }}</strong>{% endfor %}
                                         </div>
                                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                            <span aria-hidden="true"><i class="fas fa-times"></i></span>
                                         </button>
                                     </div>
                                 {% endif %}
