--- a/registration/templates/registration/warning_page.html
+++ b/registration/templates/registration/warning_page.html
@@ -14,7 +14,8 @@
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
           crossorigin="anonymous">
     <title>
-        {% block title %}{% endblock %}
+        {% block title %}
+        {% endblock title %}
     </title>
 </head>
 <div class="container p-3 my-3">
@@ -22,7 +23,7 @@
         <div class="col-md-12">
             <nav class="navbar navbar-expand-md navbar-light "
                  style="background-color: #f0f5f5">
-                <a href="/" class="navbar-brand">Home</a>
+                <a href="{% url 'home' %}" class="navbar-brand">Home</a>
                 <button type="button"
                         class="navbar-toggler"
                         data-toggle="collapse"
