--- a/registration/templates/registration/base.html
+++ b/registration/templates/registration/base.html
@@ -39,7 +39,10 @@
                             <div class="navbar-nav ml-auto">
                                 {% if user.is_authenticated %}
                                     <a href="{% url 'registration-profile' %}" class="nav-item nav-link">Profile</a>
-                                    <a href="{% url 'logout' %}" method="post" class="nav-item nav-link">Logout</a>
+                                    <form action="{% url 'logout' %}" method="post">
+                                        {% csrf_token %}
+                                        <button role="submit" class="nav-item nav-link">Logout</button>
+                                    </form>
                                 {% else %}
                                     <a href="{% url 'login' %}" class="nav-item nav-link">Sign in</a>
                                 {% endif %}
