--- a/registration/templates/registration/home.html
+++ b/registration/templates/registration/home.html
@@ -11,10 +11,10 @@
         <hr class="my-4">
         <p class="lead">
             {% if user.is_authenticated %}
-                <a class="btn btn-primary btn-lg"
-                   href="{% url 'logout' %}"
-                   method="post"
-                   role="button">Logout</a>
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button role="submit" class="btn btn-primary btn-lg">Logout</button>
+                </form>
             {% else %}
                 <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
             {% endif %}
